--- a/index.html
+++ b/index.html
@@ -25,33 +25,52 @@
      <div class="image1">
        <img src="assets/header_img.jpg" alt="Mountinies">
      </div>
+  </div>
+    <div class="boxthree">
       <div class="yose" >
          <h1>Yosemite Park Guide</h1>
-         <p>Come explore California’s beautiful wilderness.</p>
-         <p>Always open. Reservations are not available or required to enter the park.</p>
       </div>
+         <br>
+         <p>Come explore California’s beautiful wilderness.</p>
+         <br>
+         <p>Always open. Reservations are not available or required to enter the park.</p>
   </div>
-      <div>
+      <div class="text">
         <section>
          <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+
+         <br>
 
          <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
          </section>
       </div>
-      <div>
-        <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="Fire">
-        <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span>current fire restrictions.</span>
+      <div class="wholem">
+        <div class="middlei">
+          <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="Fire">
+        </div>
+        <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span class="boldit">current fire restrictions.</span>
         </p>
-      </div>
-      <div>
-        <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="Camper">
-        <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
-      </div>
-      "footer_img.png"
 
+        <div class="middlei">
+         <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="Camper">
+        </div>
+        <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span class="boldit">park entrance fee</span> upon arrival (there's no need to pay it in advance).</p>
+      </div>
 
-      <a href="#">Plan your <br> Visit</a>
-      <a href="#">Learn about <br> the Park</a>
-      <a href="#">Get <br> Involved</a>
-</body>
+  <footer class="footie">
+    <div class="footpic">
+      <img src="assets/footer_img.jpg" alt="More mounts">
+    </div>
+      <div class="boxone">
+        <nav>
+        <div class="plan">
+          <a href="#">Plan your <br> Visit</a>
+        </div>
+        <div class="learn">
+          <a href="#">Learn about <br> the Park</a>
+        </div>
+        <div class="get">
+          <a href="#">Get <br> Involved</a>
+        </div>
+  </footer>
 </html>
